[package]
name = "executor"
version = "0.1.0"
edition = "2018"

[dependencies]
async-task = "4.0.3"
crossbeam-deque = "0.8.1"
futures = "0.3.17"
num_cpus = "1.13.0"
tracing = "0.1.28"

[dev-dependencies]
async-net = "1.6.1"
flume = "0.10.9"
tokio = { version = "1.12.0", features = ["sync", "macros"] }
tracing-subscriber = "0.2.24"
